# void-test

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-ci.yml  macos-ci.yml  run.yml  windows-ci.yml
cmake/: CFlags.cmake  Cache.cmake  CacheOptions.cmake  Compiler.cmake  CompilerFlags.cmake  Config.cmake
documentation/: CMakeLists.txt  about.tex  document.tex  intro.tex  preamble.tex  tutorial.tex
example/: CMakeLists.txt  check.cpp  group.cpp  object.cpp  vector.cpp
include/: assert.hpp  citrine.hpp  cppltf.hpp  format.hpp  generator.hpp  group.hpp  macro.hpp  object.hpp  output.hpp  registry.hpp  resource.hpp  scope.hpp  state.hpp  type.hpp  type_traits.hpp  unit.hpp  utility.hpp  verifier.hpp  void_test.hpp  voidtest.hpp
include/private/: output.hpp  state.hpp  utility.hpp
include/public/: assert.hpp  object.hpp
resource/: CMakeLists.txt  about.tex  example.tex  manual.tex  reference.tex  usage.tex
source/: CMakeLists.txt  assert.cpp  assert.hpp  generator.cpp  main.cpp  object.cpp  output.cpp  output.hpp  registry.cpp  resource.cpp  scope.cpp  state.cpp  state.hpp  type.cpp  type.hpp  utility.cpp  utility.hpp  verifier.cpp
src/: CMakeLists.txt  generator.cpp  output.cpp  resource.cpp
test/: CMakeLists.txt  assert.cpp  common.cpp  common.hpp  empty.cpp  generator.cpp  global.cpp  interface.cpp  object.cpp  registry.cpp  resource.cpp  scope.cpp  state.cpp  type.cpp  unit.cpp  utility.cpp  verifier.cpp
