cmake_minimum_required (VERSION 3.15)

add_library (citrine STATIC)
add_library (citrine::citrine ALIAS citrine)
target_sources (citrine PRIVATE assert.cpp main.cpp output.cpp state.cpp type.cpp)
target_include_directories (citrine PUBLIC .)
target_compile_features (citrine PUBLIC cxx_std_17)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    target_compile_options (citrine PRIVATE -Werror -Wall -Wextra -pedantic)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    target_compile_options (citrine PRIVATE -Werror -Wall -Wextra -pedantic)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    target_compile_options (citrine PRIVATE /permissive- /WX /W4)
endif ()
